[IMP] Bug #20945 - set fiscal position false if big commerce order and down payment invoices also update PO tracking email send to customer
(cherry picked from commit eabc4e3d4f225a06dda4e8eb0c2a0e6729915eb9)

--- a/bista_customer_credit_limit_nc/views/account_invoice_view.xml
+++ b/bista_customer_credit_limit_nc/views/account_invoice_view.xml
@@ -3,6 +3,7 @@
     <record id="invoice_form_form_inherit_for_sale_order" model="ir.ui.view">
         <field name="name">account.move.form.inherit.for.sale.order</field>
         <field name="model">account.move</field>
+        <field name="priority">1</field>
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <field name="move_type" position="after">
