--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -1,36 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-    <record id="paperformat_approved_purchase_report" model="report.paperformat">
-        <field name="name">Approved/Purchase Report</field>
-        <field name="default" eval="False"/>
-        <field name="disable_shrinking" eval="True"/>
-        <field name="format">A4</field>
-        <field name="orientation">Portrait</field>
-        <field name="header_spacing">27</field>
-        <field name="margin_top">30</field>
-        <field name="margin_bottom">18</field>
-        <field name="margin_left">7</field>
-        <field name="margin_right">7</field>
-        <field name="header_line">False</field>
-        <field name="dpi">115</field>
-    </record>
-
     <record id="purchase.action_report_purchase_order" model="ir.actions.report">
         <field name="name">Approved Order</field>
         <field name="binding_model_id" eval="False"/>
         <field name="print_report_name">('Approved Order - %s' % (object.name))</field>
-        <field name="paperformat_id" ref="bista_purchase.paperformat_approved_purchase_report"/>
+        <field name="paperformat_id" ref="base.paperformat_us" />
     </record>
+
     <record id="purchase.report_purchase_quotation" model="ir.actions.report">
         <field name="name">Purchase Order</field>
         <field name="print_report_name">('Purchase Order - %s' % (object.name))</field>
-        <field name="paperformat_id" ref="bista_purchase.paperformat_approved_purchase_report"/>
+        <field name="paperformat_id" ref="base.paperformat_us" />
     </record>
+
     <template id="custom_address_layout_inherit" inherit_id="bista_report_header_footer.custom_address_layout">
         <xpath expr="//div[hasclass('address', 'row')]" position="attributes">
             <attribute name="style">font-size: 13px !important;</attribute>
         </xpath>
     </template>
+
     <template id="report_purchaseorder_document_extended" inherit_id="purchase.report_purchaseorder_document">
         <xpath expr="//t[@t-call='web.external_layout']" position="attributes">
             <attribute name="t-call">bista_report_header_footer.shipment_custom_header</attribute>
@@ -295,7 +283,6 @@
                 <p class="mb-1" t-field="o.notes" style="margin-left: 50px;"/>
             </div>
         </xpath>
-<!--        <xpath expr="//t[@t-set='information_block']" position="replace"/>-->
         <xpath expr="//t[@t-set='information_block']//strong" position="replace">
             <strong>Shipping Address</strong>
         </xpath>
