--- a/bista_purchase/report/stock_picking.xml
+++ b/bista_purchase/report/stock_picking.xml
@@ -464,33 +464,13 @@
                 </t>
             </td>
         </xpath>
-        <!-- <xpath expr="//tr/td[2]" position="after">
-            <td name="td_format">
-                <span style="font-weight:normal" t-field="aggregated_lines[line]['product'].product_format" />
-            </td>
-        </xpath> -->
     </template>
 
-    <record id="paperformat_stock_picking_report" model="report.paperformat">
-        <field name="name">Invoice/Bill Report</field>
-        <field name="default" eval="False" />
-        <field name="disable_shrinking" eval="True" />
-        <field name="format">A4</field>
-        <field name="orientation">Portrait</field>
-        <field name="header_spacing">39</field>
-        <field name="margin_top">40</field>
-        <field name="margin_bottom">18</field>
-        <field name="margin_left">7</field>
-        <field name="margin_right">7</field>
-        <field name="header_line">False</field>
-        <field name="dpi">120</field>
-    </record>
-
     <record id="stock.action_report_picking" model="ir.actions.report">
-        <field name="paperformat_id" ref="bista_purchase.paperformat_stock_picking_report" />
+        <field name="paperformat_id" ref="base.paperformat_us" />
     </record>
 
     <record id="stock.action_report_delivery" model="ir.actions.report">
-        <field name="paperformat_id" ref="bista_purchase.paperformat_stock_picking_report" />
+        <field name="paperformat_id" ref="base.paperformat_us" />
     </record>
 </odoo>
