[IMP] Bug #21120 - removed extra 'want' from confirm messgae of invoice validation
(cherry picked from commit bb7bfe54990e34bc06d9d1bb308807037017d255)

--- a/bista_customer_credit_limit_nc/views/account_invoice_view.xml
+++ b/bista_customer_credit_limit_nc/views/account_invoice_view.xml
@@ -22,7 +22,7 @@
                     <!-- Register Payment (only invoices / receipts) -->
                     <button name="action_invoice_open" type="object" string="Validate" class="oe_highlight"
                         attrs="{'invisible':['|',('state','!=','draft'),('inv_confirm_check', '=', True)]}"
-                        confirm="Are you sure want you want to Validate the Invoice ?"
+                        confirm="Are you sure you want to Validate the Invoice?"
                         groups="account.group_account_invoice" help="Validate invoice to Post this invoice" />
                     <button name="action_credit_review" type="object" string="Validate" class="oe_highlight"
                         confirm="Invoice has been placed for review by accounting. Invoice will be validated when reviewed!"
