[IMP][BC]Added no create in status and changed label of button

--- a/bigcommerce_odoo_integration/views/bigcommerce_store_configuration_view.xml
+++ b/bigcommerce_odoo_integration/views/bigcommerce_store_configuration_view.xml
@@ -300,7 +300,7 @@
                                         </div>
                                         <div class="text-muted">
                                             <b>
-                                                <field name="bigcommerce_order_status_ids" widget="many2many_tags" required="1"/>
+                                                <field name="bigcommerce_order_status_ids" widget="many2many_tags" required="1" options="{'no_create': True}"/>
                                             </b>
                                         </div>
                                     </div>
