[#21057] Improved on-time delivery report
(cherry picked from commit a739c9a8f2d373852a12fa44064ff75cc7f03c1d)

--- a/bista_sale/report/so_delivery_report.xml
+++ b/bista_sale/report/so_delivery_report.xml
@@ -38,6 +38,7 @@
         <field name="arch" type="xml">
             <search string="Sale Orders">
                 <field name="partner_id" />
+                <field name="name" />
                 <field name="is_ontime" />
                 <group expand="1" string="Group By">
                     <filter string="Customer" name="group_partner_id" context="{'group_by':'partner_id'}" />
