--- a/bista_sale/views/seller_report_views.xml
+++ b/bista_sale/views/seller_report_views.xml
@@ -8,7 +8,7 @@
                 <field name="order_id" readonly="1" />
                 <field name="order_date" readonly="1" />
                 <field name="sku" readonly="1" />
-                <field name="product_tmpl_id" readonly="1" />
+                <field name="product_tmpl_id" readonly="1" string="Product Title" />
                 <field name="partner_id" readonly="1" />
                 <field name="customer_email" optional="show" readonly="1" />
                 <field name="industry_id" optional="show" readonly="1" />
