[IMP] Support #21057 - make readonly compute field and added order status on group by filter

--- a/bista_sale/report/so_delivery_report.xml
+++ b/bista_sale/report/so_delivery_report.xml
@@ -44,6 +44,8 @@
                     <filter string="Customer" name="group_partner_id" context="{'group_by':'partner_id'}" />
                     <separator />
                     <filter string="Order Date" name="order_month" context="{'group_by': 'date_order:month'}" />
+                    <separator />
+                    <filter string="Order Status" name="order_status" context="{'group_by': 'state'}" />
                 </group>
             </search>
         </field>
